tests/should_fail/syntax_leftover_tokens.nv
module main

// SHOULD FAIL: leftover tokens after last statement - parser eof check
// A spurious token after a complete program
fn foo() -> Int {
    return 1
}
foo()
}
